Bug 1361020 - Bug 968342 follow-up: always allow mailbox: content load from mailbox: requester. Temporary regression fix. r+a=me